	MainTab/PlayerControls.qml: Receive only params of JSON objects

	* main.qml (removeNotificationFunction): Add function

	* main.qml (pollingTimer): Add timer

	* MainTab/GeneralControls.qml (Component.onCompleted): React to
	notification "Application.OnVolumeChanged"

	* SettingsTab/SettingsTab.qml (tabSelection): Fix iconSource

	* VideoTab/VideoTab.qml: Works a little more than before.

2016-06-23  Aina Lea Offensand
	* Add GPL license

    * main.qml (websocket): Log all notifications completely

	* MainTab/PlayerControls.qml (newPlayerStarted, initialRequest, requestAll,
	initialSetter, setAll): Poll all information in one method and request

	* MainTab/PlayerControls.qml (newPlayerTimer, newPlayerStarted): Wait a
	short time before making the first request to get the correct time

	* MainTab/PlayerControls.qml (initialSetter, changeToDefaults): Split
	method into two to make it more readable

	* TODO: Add Known Bugs section

2016-11-24  Aina Lea Offensand
    * main.qml, ConnectionBox.qml, MessageBox.qml: Moved connectionBox and
	messageBox into their own files

	* MainTab/MainTab.qml, MainTab/GeneralControls.qml,
	MainTab/PlayerControls.qml: Add playerid property and functionality

	* MainTab/GeneralControls.qml: Add 'Add to Playlist' function for URLs

	* MainTab/GeneralControls.qml: Use icons instead of text for SendUrl and
	SendText buttons

	* MainTab/GeneralControls.qml (sendUrlAction, parseUrl): parseUrl gets its
	own function

	* MainTab/GeneralControls.qml (volumeButton): Fix setMute

	* MainTab/MainTab.qml, main.qml: Fix focus problem that under some
	circumstances, the Up Arrow button would get focus instead of the
	focusCatcher

	* main.qml (reconnectTimer.onTriggered): Double the interval instead of
	multiplying with 10

	* main.qml (messsageBox, logToBox): New function showMessage

	* DebugTab/DebugTab.qml: Introspect is easily changeable

2016-11-24  Aina Lea Offensand
	* resources.qrc: comment out DetailTab so that it compiles again